--- a/scss/_theme.scss
+++ b/scss/_theme.scss
@@ -1,5 +1,22 @@
+@use 'utils';
+@forward 'utils';
+
 $font: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 
 :root {
-    --color: rgb(128, 191, 139);
+    color-scheme: light dark;
+
+    @include utils.defineColorHSL(--color-text, 0, 0%, 0%);
+    @include utils.defineColorHSL(--color-bg, 0, 0%, 100%);
+}
+
+@media (prefers-color-scheme: light) {
+    :root {
+        @include utils.defineColorHSL(--color-accent, 130, 33%, 66%);
+    }
+}
+@media (prefers-color-scheme: dark) {
+    :root {
+        @include utils.defineColorHSL(--color-accent, 130, 20%, 33%);
+    }
 }
