--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -8,29 +8,59 @@ body {
     margin: 0;
     width: 100%;
     height: 100%;
-    background-color: var(--color);
+    background-color: var(--color-accent);
+    color: var(--color-text);
 }
 
+$footer-height: 50px + 10px * 2 + 1px + 18px;
+
 main {
-    justify-content: center;
     display: flex;
-    color: black;
-    gap: 20px;
+    flex-direction: column;
+    width: 80%;
+    max-width: 400px;
+    margin: auto;
+    height: calc(100% - $footer-height);
+}
+
+footer {
+    margin-top: 50px;
+    padding: 10px 30px 10px 30px;
+    text-align: center;
+    border-top: black solid 1px;
 }
 
 ::selection {
-    color: white;
-    background: #0000007a;
+    color: var(--color-bg);
+    background: theme.alpha(var(--color-text), 0.6);
 }
 
-#title {
+#title,
+#suptitle {
     font-family: theme.$font;
     font-size: 60px;
     text-align: center;
+
+    // Spacing between words
+    span {
+        letter-spacing: 0.3ch;
+    }
+}
+
+#suptitle {
+    font-size: 40px;
+    font-weight: lighter;
+    margin-bottom: -1em;
 }
 
 .elevation {
-    border: 4px solid black;
-    box-shadow: -8px 8px black;
+    border: 4px solid var(--color-text);
+    box-shadow: -8px 8px var(--color-text);
     margin: 0 0 8px 8px;
+}
+
+.bio {
+    p {
+        text-align: center;
+    }
 }
