--- a/scss/menyow.scss
+++ b/scss/menyow.scss
@@ -76,7 +76,7 @@ header {
                 bottom: $point-size;
                 outline: 0 solid var(--color-text);
                 border: 4px solid var(--color-accent);
-                transition: outline-width .1s cubic-bezier(0.25, 0.46, 0.45, 1.14);
+                transition: outline-width .12s cubic-bezier(0.25, 0.46, 0.45, 1.14);
             }
 
             // title
@@ -86,7 +86,11 @@ header {
                 padding: 5px;
                 font-family: theme.$title-font;
                 font-weight: 300;
-                transition: margin-left .15s cubic-bezier(0.4, 0, 1, 1);
+                transition: margin-left .12s cubic-bezier(0.4, 0, 1, 1);
+
+                @media screen and (max-width: 320px) {
+                    font-size: 14px;
+                }
             }
         }
 
@@ -119,10 +123,8 @@ header {
         &:first-of-type {
             top: 10px;
         }
-    }
 
-    @media screen and (max-width: 600px) {
-        >time {
+        @media screen and (max-width: 600px) {
             rotate: 90deg;
             left: calc(-2em - 20px);
             direction: ltr;
