Added hockey line picker page

--- a/scss/index.scss
+++ b/scss/index.scss
@@ -3,11 +3,7 @@
 #title {
     text-align: center;
     font-size: 60px;
-
-    // Spacing between words
-    span {
-        letter-spacing: 0.2ch;
-    }
+    word-spacing: -0.7ch;
 }
 
 #suptitle {
