--- a/scss/_theme.scss
+++ b/scss/_theme.scss
@@ -22,4 +22,5 @@ $title-font: "Moderne Sans", Verdana, Tahoma, sans-serif;
 @font-face {
     font-family: "Moderne Sans";
     src: url("../fonts/Moderne Sans Font.ttf");
+    font-display: swap;
   }
