--- a/hlp/practice.css
+++ b/hlp/practice.css
@@ -3,3 +3,20 @@
     height: auto;
     min-height: 1em;
 }
+
+@media screen and (max-width: 400px) {
+    .cont {
+        padding-left: 50%;
+        flex-wrap: wrap;
+    }
+
+    #rost-cont-cont {
+        position: fixed;
+        left: 12px;
+        width: calc(50% - 12px);
+    }
+}
+
+#edit-page {
+    min-width: unset;
+}
