--- a/passthrough/css/menyow.css
+++ b/passthrough/css/menyow.css
@@ -1,5 +1,3 @@
-@use 'theme';
-
 .profile {
     border-radius: 50%;
     outline: 1px black solid;
@@ -12,22 +10,13 @@
     background-position-y: 7px;
 }
 
-header {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    flex-wrap: wrap;
-    column-gap: 20px;
-}
-
 .timeline {
-    $fade-length: 20px;
 
     position: relative;
     margin-top: 15px;
-    margin-bottom: $fade-length;
+    margin-bottom: 20px;
 
-    // bar
+    /* bar */
     &::before {
         content: "";
         display: block;
@@ -38,14 +27,14 @@ header {
         border-left: 4px solid var(--color-text);
     }
 
-    // bar fade
+    /* bar fade */
     &::after {
         content: "";
         display: block;
         position: absolute;
-        height: $fade-length;
+        height: 20px;
         left: 1ch;
-        bottom: -$fade-length;
+        bottom: -20px;
         border-left: 4px dashed;
         border-image: linear-gradient(var(--color-text), transparent) 1;
     }
@@ -61,30 +50,29 @@ header {
         >summary {
             position: relative;
             list-style-type: none;
-            margin-bottom: 4px + 8px;
+            margin-bottom: calc(4px + 8px);
             width: fit-content;
             cursor: zoom-in;
 
-            // point
+            /* point */
             &::before {
-                $point-size: 4px;
                 content: "";
                 position: absolute;
-                width: $point-size;
-                height: $point-size;
-                left: calc(0.5em - $point-size);
-                bottom: $point-size;
+                width: 4px;
+                height: 4px;
+                left: calc(0.5em - 4px);
+                bottom: 4px;
                 outline: 0 solid var(--color-text);
                 border: 4px solid var(--color-accent);
                 transition: outline-width .12s cubic-bezier(0.25, 0.46, 0.45, 1.14);
             }
 
-            // title
+            /* title */
             >.title {
                 position: relative;
                 margin-left: 40px;
                 padding: 5px;
-                font-family: theme.$title-font;
+                font-family: var(--font-title);
                 font-weight: 300;
                 transition: margin-left .12s cubic-bezier(0.4, 0, 1, 1);
 
@@ -98,7 +86,7 @@ header {
             cursor: zoom-out;
 
             .title {
-                margin-left: 40px + 40px;
+                margin-left: calc(40px + 40px);
             }
 
             &::before {
@@ -114,11 +102,10 @@ header {
     }
 
     >time {
-        $chars: 8ch;
         position: absolute;
         direction: rtl;
-        width: $chars;
-        left: calc(0px - $chars - 20px);
+        width: 8ch;
+        left: calc(8ch - 20px);
 
         &:first-of-type {
             top: 10px;
