--- a/passthrough/css/styles.css
+++ b/passthrough/css/styles.css
@@ -1,4 +1,41 @@
-@use 'theme';
+:root {
+    color-scheme: light dark;
+
+    --color-text: black;
+    --color-bg: white;
+    --font: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    --font-title: "Moderne Sans", Verdana, Tahoma, sans-serif;
+}
+
+@media (prefers-color-scheme: light) {
+    :root {
+        --color-accent: #8cc595;
+    }
+}
+
+@media (prefers-color-scheme: dark) {
+    :root {
+        --color-accent: #436549;
+    }
+}
+
+@font-face {
+    font-family: "Moderne Sans";
+    src: url("../fonts/Moderne Sans Font.ttf");
+    font-display: swap;
+}
+
+header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    column-gap: 20px;
+}
+
+img.icon {
+    image-rendering: pixelated;
+}
 
 html {
     height: 100%;
@@ -21,8 +58,6 @@ body {
     justify-content: space-between;
 }
 
-$footer-height: 50px + 10px * 2 + 1px + 18px;
-
 main {
     display: flex;
     flex-direction: column;
@@ -41,12 +76,10 @@ footer {
     gap: 10px 30px;
     flex-wrap: wrap;
 
-    $size: 1px;
-    $spacing: 20px;
-    background-image: repeating-radial-gradient(var(--color-text), var(--color-text) $size, transparent $size, transparent);
+    background-image: repeating-radial-gradient(var(--color-text), var(--color-text) 1px, transparent 1px, transparent);
     background-repeat: repeat;
     background-position: center;
-    background-size: $spacing $spacing;
+    background-size: 20px 20px;
 
     * {
         background-color: var(--color-accent);
@@ -64,7 +97,7 @@ h3,
 h3,
 h5,
 h6 {
-    font-family: theme.$title-font;
+    font-family: var(--font-title);
     word-spacing: -0.5ch;
 }
 
@@ -83,10 +116,9 @@ a {
 }
 
 .elevation {
-    $elv-width: 8px;
-    border: calc($elv-width/2) solid var(--color-text);
-    box-shadow: -$elv-width $elv-width var(--color-text);
-    margin: 0 0 $elv-width $elv-width;
+    border: 4px solid var(--color-text);
+    box-shadow: -8px 8px var(--color-text);
+    margin: 0 0 8px 8px;
     background-color: var(--color-bg);
 }
 
@@ -118,18 +150,14 @@ a {
 }
 
 .dotted {
-    $size: 1px;
-    $spacing: 20px;
-    background-image: repeating-radial-gradient(var(--color-text), var(--color-text) $size, transparent $size, transparent);
+    background-image: repeating-radial-gradient(var(--color-text), var(--color-text) 1px, transparent 1px, transparent);
     background-repeat: repeat;
     background-position: center;
-    background-size: $spacing $spacing;
+    background-size: 20px 20px;
 }
 
 .striped {
-    $width: 2px;
-    $spacing: 20px;
-    background-image: repeating-linear-gradient(45deg, var(--color-text), var(--color-text) $width, transparent $width, transparent $spacing);
+    background-image: repeating-linear-gradient(45deg, var(--color-text), var(--color-text) 2px, transparent 2px, transparent 20px);
 }
 
 input[type="color"] {
@@ -142,7 +170,7 @@ input[type="color"] {
     &::-webkit-color-swatch-wrapper {
         padding: 0;
     }
-    
+
     &::-moz-color-swatch,
     &::-webkit-color-swatch {
         outline: 1px solid white;
