--- a/passthrough/css/terrain.css
+++ b/passthrough/css/terrain.css
@@ -1,11 +1,3 @@
-header {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    flex-wrap: wrap;
-    column-gap: 20px;
-}
-
 .tasklist {
     * {
         list-style: none;
@@ -58,9 +50,9 @@ td {
         padding-left: 4px;
         padding-right: 4px;
 
-        // &:nth-child(8) {
-        //     padding-right: 12px;
-        // }
+        /* &:nth-child(8) {
+            padding-right: 12px;
+        } */
     }
 
     div {
