Updated favicon tot - Added color to tuis hlp - Added icon

--- a/_includes/head.liquid
+++ b/_includes/head.liquid
@@ -17,5 +17,5 @@
 <meta name="theme-color" media="(prefers-color-scheme: light)" content="hsl(130, 33%, 66%)" />
 <meta name="theme-color" media="(prefers-color-scheme: dark)" content="hsl(130, 20%, 33%)" />
 
-<link rel="shortcut icon" href="/images/favicon.png">
+<link rel="shortcut icon" href="/images/favicon.ico">
 <link rel="stylesheet" href="/css/styles.css">
