--- a/_includes/head.liquid
+++ b/_includes/head.liquid
@@ -3,7 +3,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="referrer" content="no-referrer">
 
-<title>ASoftGlow.dev{% if title %} | {{ title }}{% endif %}</title>
+<title>{% if title %}{{ title }} | {% endif %}ASoftGlow.dev</title>
 {% if title %}<meta property="og:title" content="{{ title }}">{% endif %}
 <meta name="author" content="ASoftGlow">
 <meta name="creator" content="ASoftGlow">
