More info, style tweaks

--- a/_includes/project-header.liquid
+++ b/_includes/project-header.liquid
@@ -2,7 +2,7 @@
 <header>
     <div>
         <h1>{{ title }}</h1>
-        {% if description %}<h3>{{ description }}</h3>{% endif %}
+        {% if description %}<h3 class="subtitle">{{ description }}</h3>{% endif %}
     </div>
     {% if image %}<img class="icon" width="64px" height="64px" src="{{ image }}" aria-hidden="true">{% endif %}
 </header>
