Wrote US and ZvH drafts, improved markup reuse

--- a/_includes/footer.liquid
+++ b/_includes/footer.liquid
@@ -1,4 +1,4 @@
 <footer>
-    <span>© 2024 ASoftGlow</span>
-    <a href="mailto:me@asoftglow.dev">✉ Contact</a>
+    <span>© {% year %} ASoftGlow</span>
+    <address><a href="mailto:me@asoftglow.dev">✉ Contact</a></address>
 </footer>
