--- a/_includes/project-header.liquid
+++ b/_includes/project-header.liquid
@@ -1,8 +1,8 @@
-<a id="home-link" href="/" title="Back">←</a>
 <header>
     <div>
         <h1>{{ title }}</h1>
         {% if description %}<h3 class="subtitle">{{ description }}</h3>{% endif %}
     </div>
     {% if image %}<img class="icon" width="64px" height="64px" src="{{ image }}" aria-hidden="true">{% endif %}
+    {% if link %}<a class="product-link" href="{{ link }}">{{ link | getLinkText }}</a>{% endif %}
 </header>
