--- a/passthrough/css/styles.css
+++ b/passthrough/css/styles.css
@@ -67,7 +67,6 @@ main {
 footer {
     margin-top: 50px;
     padding: 10px 30px 10px 30px;
-    text-align: center;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -104,13 +103,18 @@ h6 {
     background: var(--color-text);
 }
 
-li {
+ul li {
     list-style-type: square;
 }
 
 a {
     color: var(--color-text);
     user-select: all;
+}
+
+hr {
+    border: none;
+    border-top: 1px solid var(--color-text);
 }
 
 .elevation {
@@ -221,4 +225,8 @@ abbr {
     font-family: initial;
     word-spacing: initial;
     font-weight: normal;
+}
+
+address {
+    font-style: normal;
 }
