Added useless shell to index, added to and made ZvH more DRY

--- a/passthrough/css/styles.css
+++ b/passthrough/css/styles.css
@@ -3,19 +3,15 @@
 
     --color-text: black;
     --color-bg: white;
+    --color-accent: #93bd9a;
     --font: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     --font-title: "Moderne Sans", Verdana, Tahoma, sans-serif;
-}
-
-@media not print and (prefers-color-scheme: light) {
-    :root {
-        --color-accent: #93bd9a;
-    }
 }
 
 @media not print and (prefers-color-scheme: dark) {
     :root {
         --color-accent: #486f4f;
+        --color-bg: #b2beb5;
     }
 }
 
