--- a/_includes/project-header.liquid
+++ b/_includes/project-header.liquid
@@ -3,6 +3,6 @@
         <h1>{{ title }}</h1>
         {% if description %}<h3 class="subtitle">{{ description }}</h3>{% endif %}
     </div>
-    {% if image %}<img class="icon" width="64px" height="64px" src="{{ image }}" aria-hidden="true">{% endif %}
+    {% if image %}<img class="icon" width="64px" height="64px" src="{{ image }}" alt="Icon for {{ title }}.">{% endif %}
     {% if link %}<a class="product-link" href="{{ link }}">{{ link | getLinkText }}</a>{% endif %}
 </header>
