misc and fix tui font

--- a/_includes/footer.liquid
+++ b/_includes/footer.liquid
@@ -1,4 +1,4 @@
 <footer>
     <span>© {% year %} ASoftGlow</span>
-    <address><a href="mailto:me@asoftglow.dev">✉ Contact</a></address>
+    <address><a href="mailto:me@asoftglow.dev">Contact</a></address>
 </footer>
